# Idefix

./: .gitignore  Makefile.am  Makefile.in  README  WebGui.1  autogen.sh  cgi.c  config.h.in  configure  configure.ac  http.c  http.h  idefix.1  idefix.css  index.html  main.c  objmem.h  socket_io.h  sockserver.c  sockserver.h
WebGui.xcodeproj/: ol.mode1v3  ol.pbxuser  project.pbxproj
html/: ajax1.txt  ajaxdemo.html  form.html  index.html  script.js
src/: Makefile.am  Makefile.in  cgi.c  cgi.h  http.c  http.h  main.c  objmem.c  objmem.h  socket_io.c  socket_io.h  sockserver.c  sockserver.h
